--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/iv_home_image"
+            android:id="@+id/imv_home_image"
             app:layout_constraintDimensionRatio="W,1:1"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintTop_toTopOf="parent"
