--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,63 +7,91 @@
     tools:context=".HomeActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
         android:id="@+id/cl_home_profile"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="50dp"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginBottom="400dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="400dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/imv_home_image"
-            app:layout_constraintDimensionRatio="W,1:1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@mipmap/ic_launcher"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintDimensionRatio="W,1:1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/tv_home_id"
-            android:text="id"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_home_name"/>
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="id"
+            app:layout_constraintBottom_toTopOf="@id/tv_home_name"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
             android:id="@+id/tv_home_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="name"
             android:textColor="@color/black"
             android:textSize="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/scv_home_intro"/>
+            app:layout_constraintBottom_toTopOf="@id/scv_home_intro"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
             android:id="@+id/scv_home_intro"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
             android:background="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_home_more"
+            app:layout_constraintStart_toStartOf="parent">
 
             <TextView
+                android:id="@+id/tv_home_intro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_home_intro"
                 android:text="화이팅입니다\n화이팅입니다\n화이팅입니다"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
         </ScrollView>
 
+        <Button
+            android:id="@+id/btn_home_more"
+            android:layout_width="100dp"
+            android:layout_height="0dp"
+            android:text="more"
+            app:layout_constraintBottom_toBottomOf="@id/scv_home_intro"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/scv_home_intro"
+            app:layout_constraintTop_toTopOf="@id/scv_home_intro" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_home_repoInfo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/cl_home_profile"
+        app:layout_constraintStart_toStartOf="@id/cl_home_profile"
+        app:layout_constraintTop_toBottomOf="@id/cl_home_profile">
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fcv_home_repoInfo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
