--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,30 +11,31 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toTopOf="@id/cl_signUp_id"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:layout_marginBottom="15dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed">
 
         <TextView
             android:id="@+id/tv_signUp_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="이름"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/et_signUp_name"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/et_signUp_name"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
         <EditText
             android:id="@+id/et_signUp_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="이름을 입력해주세요"
-            app:layout_constraintTop_toBottomOf="@id/tv_signUp_name"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_signUp_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -43,79 +44,79 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        app:layout_constraintTop_toBottomOf="@id/cl_signUp_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/cl_signUp_pw"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@id/cl_signUp_pw"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_signUp_name">
 
         <TextView
             android:id="@+id/tv_signUp_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="깃허브 아이디"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/et_signUp_id"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/et_signUp_id"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/et_signUp_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="ID를 입력해주세요"
-            app:layout_constraintTop_toBottomOf="@id/tv_signUp_id"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_signUp_id" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_signUp_pw"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/cl_signUp_pw"
         android:layout_marginHorizontal="30dp"
-        app:layout_constraintTop_toBottomOf="@id/cl_signUp_id"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_signUp_signUp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@id/btn_signUp_signUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_signUp_id">
 
         <TextView
+            android:id="@+id/tv_signUp_pw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_signUp_pw"
             android:text="비밀번호"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/et_signUp_pw"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/et_signUp_pw"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
+            android:id="@+id/et_signUp_pw"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/et_signUp_pw"
             android:hint="비밀번호를 입력해주세요"
             android:inputType="textPassword"
-            app:layout_constraintTop_toBottomOf="@id/tv_signUp_pw"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_signUp_pw" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
+        android:id="@+id/btn_signUp_signUp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_signUp_signUp"
         android:layout_marginHorizontal="30dp"
-        android:text="signup"
-        app:layout_constraintTop_toBottomOf="@id/cl_signUp_pw"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="200dp"/>
+        android:layout_marginBottom="200dp"
+        android:text="signup"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_signUp_pw" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
