--- a/app/src/main/res/layout/fragment_repository_list.xml
+++ b/app/src/main/res/layout/fragment_repository_list.xml
@@ -16,6 +16,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_repositoryList_layoutChange"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_repositoryList_layoutChange"
+        android:text="changing layout"
+        app:layout_constraintTop_toBottomOf="@id/rcv_repositoryList"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
