--- a/app/src/main/res/layout/item_follow_user.xml
+++ b/app/src/main/res/layout/item_follow_user.xml
@@ -20,8 +20,9 @@
         android:id="@+id/tv_followUser_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintTop_toTopOf="@id/imv_followUser_propic"
         app:layout_constraintStart_toEndOf="@id/imv_followUser_propic"
