--- a/app/src/main/res/layout/fragment_following_list.xml
+++ b/app/src/main/res/layout/fragment_following_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FollowingListFragment">
+    tools:context=".presentation.home.userinfo.following.FollowingListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_followingList"
